account_home added

--- a/cc_connect/accounts/templates/accounts/account_home.html
+++ b/cc_connect/accounts/templates/accounts/account_home.html
@@ -1,2 +1,3 @@
 <h1>Welcome, {{ user.username }}!</h1>
 <p>Country of Origin: {{ user.country_of_origin }}</p>
+<a href="{% url 'businesses_home' %}">Explore Businesses</a>
