Message board, User class optimization

--- a/cc_connect/accounts/templates/accounts/create_account.html
+++ b/cc_connect/accounts/templates/accounts/create_account.html
@@ -44,7 +44,7 @@
                 <h1>Cross Cultural Connect</h1>
             </div>
             <p>Already have an account?</p>
-            <a href="{% url 'signin' %}" class="sign-up-btn">Sign In</a>
+            <a href="{% url 'login' %}" class="sign-up-btn">Sign In</a>
         </div>
     </div>
 </body>
