--- a/cc_connect/accounts/templates/accounts/homepage.html
+++ b/cc_connect/accounts/templates/accounts/homepage.html
@@ -11,7 +11,7 @@
     <div class="login-container">
         <div class="login-form">
             <h2>Sign In</h2>
-            <form method="POST" action="{% url 'signin' %}">
+            <form method="POST" action="{% url 'login' %}">
                 {% csrf_token %}
                 <label for="username">Username</label>
                 <input type="text" id="username" name="username" placeholder="Username" required>
