--- a/cc_connect/businesses/templates/businesses/map.html
+++ b/cc_connect/businesses/templates/businesses/map.html
@@ -61,6 +61,7 @@
             <a href="{% url 'overview' %}">Overview</a>
             <a href="{% url 'message_board' %}">Message Board</a>
             <a>Businesses</a>
+            <a>Map🗺️</a>
             <a class="profile-icon">P</a>
         </div>
     </nav>
