--- a/cc_connect/message_board/templates/message_board/message_board.html
+++ b/cc_connect/message_board/templates/message_board/message_board.html
@@ -9,18 +9,19 @@
 </head>
 <body class="message-board-body">
 
-    <!-- Navigation Bar -->
-    <nav class="message-board-nav">
-        <div class="nav-left">
-            <img src="{% static 'images/logo.svg' %}" alt="Logo" class="nav-logo">
-            <span class="nav-title">Cross Cultural Connect</span>
+     <!-- Navigation Bar -->
+     <nav class="navbar">
+        <div class="navbar-left">
+            <img src="{% static 'images/logo.svg' %}" alt="Logo" class="logo">
+            <span class="navbar-title">Cross Cultural Connect</span>
         </div>
-        <div class="nav-links">
-            <a href="{% url 'overview' %}" class="nav-link">Overview</a>
-            <a href="{% url 'message_board' %}" class="nav-link active">Message Board</a>
-            
+        <div class="navbar-links">
+            <a href="{% url 'overview' %}">Overview</a>
+            <a href="{% url 'message_board' %}">Message Board</a>
+            <a>Businesses</a>
+            <a>Map🗺️</a>
+            <a class="profile-icon">P</a>
         </div>
-        <div class="nav-profile">P</div>
     </nav>
 
     <!-- Main Content -->
